Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24832

Root page AHI Removal fails fails during bulk index rollback

    XMLWordPrintable

Details

    Description

      Sporadic. Usually requires 2 attempts sequentially on same server, sometimes more. Cores may not always be written. Frequently seen in runs.

      DROP DATABASE test;
      CREATE DATABASE test;
      USE test;
      XA START 'a';
      SET GLOBAL innodb_adaptive_hash_index='ON';
      CREATE TEMPORARY TABLE t1(c INT) ENGINE=InnoDB;
      CREATE TEMPORARY TABLE t3(a INT) ENGINE=MERGE UNION=(t1,t2);
      INSERT INTO t1(c) SELECT seq FROM seq_1_to_500;
      LOAD INDEX INTO CACHE t3 KEY(b),t2 KEY(d);
      INSERT INTO t1(c) SELECT seq FROM seq_1_to_500;
      

      Leads to:

      10.6.0 786bc312b85e58857cb26a24ab6e997ba0fdfc32 (Debug)

      InnoDB: Failing assertion: (block)->index || (block)->n_pointers == 0
      

      10.6.0 786bc312b85e58857cb26a24ab6e997ba0fdfc32 (Debug)

      Core was generated by `/test/MD100221-mariadb-10.6.0-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x14a64c737700 (LWP 2127796))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x000055b0c7a3955e in my_write_core (sig=sig@entry=6) at /test/10.6_dbg/mysys/stacktrace.c:424
      #2  0x000055b0c71d14de in handle_fatal_signal (sig=6) at /test/10.6_dbg/sql/signal_handler.cc:330
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014a657b9c859 in __GI_abort () at abort.c:79
      #6  0x000055b0c7819e9a in ut_dbg_assertion_failed (expr=expr@entry=0x55b0c7e07a40 "(block)->index || (block)->n_pointers == 0", file=file@entry=0x55b0c7e58fe0 "/test/10.6_dbg/storage/innobase/btr/btr0sea.cc", line=line@entry=1379) at /test/10.6_dbg/storage/innobase/ut/ut0dbg.cc:60
      #7  0x000055b0c7880d06 in btr_search_drop_page_hash_index (block=block@entry=0x14a634010a00) at /test/10.6_dbg/storage/innobase/btr/btr0sea.cc:1379
      #8  0x000055b0c78290bb in dict_index_t::clear (this=this@entry=0x14a5e802e938, thr=thr@entry=0x14a5e82bd1d8) at /test/10.6_dbg/storage/innobase/btr/btr0btr.cc:1219
      #9  0x000055b0c776e587 in dict_table_t::clear (this=<optimized out>, thr=thr@entry=0x14a5e82bd1d8) at /test/10.6_dbg/storage/innobase/row/row0log.cc:4129
      #10 0x000055b0c79ae6f8 in row_undo_ins (node=node@entry=0x14a5e82bd628, thr=thr@entry=0x14a5e82bd1d8) at /test/10.6_dbg/storage/innobase/row/row0uins.cc:607
      #11 0x000055b0c77a4eaf in row_undo (thr=0x14a5e82bd1d8, node=0x14a5e82bd628) at /test/10.6_dbg/storage/innobase/row/row0undo.cc:439
      #12 row_undo_step (thr=thr@entry=0x14a5e82bd1d8) at /test/10.6_dbg/storage/innobase/row/row0undo.cc:495
      #13 0x000055b0c76e92c8 in que_thr_step (thr=0x14a5e82bd1d8) at /test/10.6_dbg/storage/innobase/que/que0que.cc:651
      #14 que_run_threads_low (thr=0x14a5e82bd1d8) at /test/10.6_dbg/storage/innobase/que/que0que.cc:709
      #15 que_run_threads (thr=0x14a5e82bd1d8) at /test/10.6_dbg/storage/innobase/que/que0que.cc:729
      #16 0x000055b0c77f4d1c in trx_t::rollback_low (this=this@entry=0x14a64e9f22a0, savept=savept@entry=0x0) at /test/10.6_dbg/storage/innobase/trx/trx0roll.cc:118
      #17 0x000055b0c77f2ae3 in trx_rollback_for_mysql_low (trx=0x14a64e9f22a0) at /test/10.6_dbg/storage/innobase/trx/trx0roll.cc:189
      #18 trx_rollback_for_mysql (trx=trx@entry=0x14a64e9f22a0) at /test/10.6_dbg/storage/innobase/trx/trx0roll.cc:219
      #19 0x000055b0c75c42ae in innobase_rollback (hton=<optimized out>, thd=0x14a5e8000db8, rollback_trx=<optimized out>) at /test/10.6_dbg/storage/innobase/handler/ha_innodb.cc:4111
      #20 0x000055b0c71d6c67 in ha_rollback_trans (thd=thd@entry=0x14a5e8000db8, all=all@entry=true) at /test/10.6_dbg/sql/handler.cc:2053
      #21 0x000055b0c707c1ed in trans_rollback_implicit (thd=thd@entry=0x14a5e8000db8) at /test/10.6_dbg/sql/transaction.cc:421
      #22 0x000055b0c707a3d5 in mysql_admin_table (thd=thd@entry=0x14a5e8000db8, tables=tables@entry=0x14a5e8012800, check_opt=check_opt@entry=0x0, operator_name=operator_name@entry=0x55b0c7d8dfa3 "preload_keys", lock_type=lock_type@entry=TL_READ_NO_INSERT, org_open_for_modify=org_open_for_modify@entry=false, repair_table_use_frm=false, extra_open_options=0, prepare_func=0x0, operator_func=&virtual table offset 752, view_operator_func=0x0) at /test/10.6_dbg/sql/sql_admin.cc:1240
      #23 0x000055b0c707b09b in mysql_preload_keys (thd=thd@entry=0x14a5e8000db8, tables=tables@entry=0x14a5e8012800) at /test/10.6_dbg/sql/sql_admin.cc:1368
      #24 0x000055b0c6f0d4be in mysql_execute_command (thd=thd@entry=0x14a5e8000db8) at /test/10.6_dbg/sql/sql_parse.cc:3976
      #25 0x000055b0c6ef921a in mysql_parse (thd=thd@entry=0x14a5e8000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x14a64c7363d0) at /test/10.6_dbg/sql/sql_parse.cc:7906
      #26 0x000055b0c6f0730b in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x14a5e8000db8, packet=packet@entry=0x14a5e801aac9 "", packet_length=packet_length@entry=41) at /test/10.6_dbg/sql/sql_class.h:1295
      #27 0x000055b0c6f0a63d in do_command (thd=0x14a5e8000db8) at /test/10.6_dbg/sql/sql_parse.cc:1365
      #28 0x000055b0c70661ab in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55b0ca0176e8, put_in_cache=put_in_cache@entry=true) at /test/10.6_dbg/sql/sql_connect.cc:1410
      #29 0x000055b0c70668af in handle_one_connection (arg=arg@entry=0x55b0ca0176e8) at /test/10.6_dbg/sql/sql_connect.cc:1312
      #30 0x000055b0c751a27d in pfs_spawn_thread (arg=0x55b0c9f02c38) at /test/10.6_dbg/storage/perfschema/pfs.cc:2201
      #31 0x000014a6580aa609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #32 0x000014a657c99293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.6.0 (dbg), 10.6.0 (opt)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.2.37 (dbg), 10.2.37 (opt), 10.3.28 (dbg), 10.3.28 (opt), 10.4.18 (dbg), 10.4.18 (opt), 10.5.9 (dbg), 10.5.9 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.51 (dbg), 5.6.51 (opt), 5.7.33 (dbg), 5.7.33 (opt), 8.0.23 (dbg), 8.0.23 (opt)

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h
                  5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.