MDEV-24832 Root page AHI removal fails during rollback of bulk insert

This failure is caused by commit 43ca6059cae8225e72fbd9495d20a6ce1c0f31b8
(MDEV-24720). InnoDB fails to remove the ahi entries
during rollback of bulk insert operation. InnoDB should
remove the AHI entries of root page before reinitialising it.

Reviewed-by: Marko Mäkelä